asterisk (1:1.4.10.1~dfsg-1) UNRELEASED; urgency=low

  [ Tzafrir Cohen ]
  * New upstream release.
  * Removing build requirement gtk (maybe needed for building the 
    non-usable gtk console. If anybody needs it, please file a bug report.)

 -- Tzafrir Cohen <tzafrir.cohen@xorcom.com>  Sat, 11 Aug 2007 19:59:06 +0000

asterisk (1:1.4.10~dfsg-1) unstable; urgency=low

  * New upstream release
    - Fwd: [asterisk-announce] ASA-2007-019: Remote crash vulnerability in
    Skinny channel driver (Closes: #436808)

  [ Mark Purcell ]
  * debhelper(1) states Build-Depends: debhelper (>= 5)
    - aids backports
  * Update debian/backports for etch, edgy, dapper and feisty
    - http://status.buildserver.net/packages/status.php?package=asterisk&subdist=pkg-voip

  [ Faidon Liambotis ]
  * Refer to /usr/share/common-licenses/GPL-2 instead of GPL. The code is
    -for now- GPLv2-only and in light of GPLv3, pointing to GPL is misleading.
  * Add ast_key_dir patch to move keys from /var/lib/asterisk/keys to
    /usr/share/asterisk/keys where they should be.
  * Actually ship keys, including Junction Networks' by fixing pubkey_jnctn
    patch.
  * Handle space/newline-delimited directories on /etc/asterisk when doing
    chmod on postinst.
  * Correct descriptions of packages in debian/control, adapting them to the
    present and correcting some spelling mistakes. (Closes: #428671)
  * Add a noload directive for cdr_sqlite.so in the default modules.conf since
    it writes unconditionally to the database file without being rotated,
    resulting in unexpected waste of disk space. (Closes: #301883)
  * Delete duplicated creation of /var/run/asterisk in the init script.

 -- Mark Purcell <msp@debian.org>  Thu, 09 Aug 2007 22:47:00 +0100

asterisk (1:1.4.9~dfsg-1) unstable; urgency=high

  [ Tzafrir Cohen ]
  * New upstream release.
    - ASA-2007-018 - DoS Resource Exhaustion vulnerability in IAX2

  [ Faidon Liambotis ]
  * Add myself to Uploaders.