@@ -68,22 +68,26 @@ config.status: check-sounds patch-stamp
 	
 	# Without --with-gsm the internal gsm will be used
 	$(FETCH_ENV) ./configure --with-gsm \
-		--with-pwlib=/usr/share/pwlib/include/ --with-h323=/usr/share/openh323/ \
 		--host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) \
                 --prefix=/usr \
                 --mandir=\$${prefix}/share/man \
                 --infodir=\$${prefix}/share/info
+		# asterisk-h323 is broken at presnet don't ship
+		# --with-pwlib=/usr/share/pwlib/include/ 
+		# --with-h323=/usr/share/openh323/ \
 
 
 menuselect.makeopts: config.status
 	$(FETCH_ENV) $(MAKE) menuselect.makeopts
 	sed -i -e '/^MENUSELECT_MOH=/d' menuselect.makeopts
 
-	# some voodoo in order to get chan_h323 built, and make it in one
-	# build pass:
-	# enable chan_h323 (not enabled by default). Note that modules listed
-	# in MENUSELECT_CHANNEL are ones to disable:
-	sed -i -e '/MENUSELECT_CHANNELS=/s/chan_h323//' menuselect.makeopts
+	## some voodoo in order to get chan_h323 built, and make it in one
+	## build pass:
+	## enable chan_h323 (not enabled by default). Note that modules listed
+	## in MENUSELECT_CHANNEL are ones to disable:
+	
+	# asterisk-h323 is broken at present - don't ship
+	#sed -i -e '/MENUSELECT_CHANNELS=/s/chan_h323//' menuselect.makeopts
 	cat menuselect.makedeps
 	cat menuselect.makeopts
 
@@ -94,7 +98,9 @@ build-arch-stamp: menuselect.makeopts
 	dh_testdir
 
 	# Add here command to compile/build the package.
-	$(FETCH_ENV) $(MAKE) $(MAKEFLAGS) || true
+	
+	# asterisk-h323 is broken at present don't ship
+	# $(FETCH_ENV) $(MAKE) $(MAKEFLAGS) || true
 
 	# Build a second time to pick up h323 :-(
 	$(FETCH_ENV) $(MAKE) $(MAKEFLAGS)
@@ -192,7 +198,6 @@ binary-arch: install-arch
 	dh_compress -a
 	dh_fixperms -a
 	dh_installdeb -a
-	rm -f debian/asterisk/usr/lib/asterisk/modules/chan_h323.so
 	dh_makeshlibs -a 
 	dh_shlibdeps -a
 	dh_gencontrol -a
