@@ -2,10 +2,14 @@ asterisk (1:1.4.10.1~dfsg-1) UNRELEASED; urgency=low
 
   [ Tzafrir Cohen ]
   * New upstream release.
-  * Removing build requirement gtk (maybe needed for building the 
+  * Removing build requirement gtk (maybe needed for building the
     non-usable gtk console. If anybody needs it, please file a bug report.)
 
- -- Tzafrir Cohen <tzafrir.cohen@xorcom.com>  Sat, 11 Aug 2007 19:59:06 +0000
+  [ Mark Purcell ]
+  * asterisk-h323 is broken at present (See #xxxx) 
+    - do not ship or depend on h323
+
+ -- Mark Purcell <msp@debian.org>  Tue, 14 Aug 2007 18:20:54 +0100
 
 asterisk (1:1.4.10~dfsg-1) unstable; urgency=low
 
